; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/common/extr_tupdesc.c_TupleDescInitEntryCollation.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/common/extr_tupdesc.c_TupleDescInitEntryCollation.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @TupleDescInitEntryCollation(%struct.TYPE_6__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %8 = call i32 @PointerIsValid(%struct.TYPE_6__* %7)
  %9 = call i32 @AssertArg(i32 %8)
  %10 = load i32, i32* %5, align 4
  %11 = icmp sge i32 %10, 1
  %12 = zext i1 %11 to i32
  %13 = call i32 @AssertArg(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp sle i32 %14, %17
  %19 = zext i1 %18 to i32
  %20 = call i32 @AssertArg(i32 %19)
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %23 = load i32, i32* %5, align 4
  %24 = sub nsw i32 %23, 1
  %25 = call %struct.TYPE_7__* @TupleDescAttr(%struct.TYPE_6__* %22, i32 %24)
  %26 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %25, i32 0, i32 0
  store i32 %21, i32* %26, align 4
  ret void
}

declare dso_local i32 @AssertArg(i32) #1

declare dso_local i32 @PointerIsValid(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_7__* @TupleDescAttr(%struct.TYPE_6__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
